# PocoLibTest

PocoMobileProjects/: settings.gradle
PocoMobileProjects/app/: build.gradle
PocoMobileProjects/app/src/androidTest/java/com/seerlsab/pocoMobileSample/: ExampleInstrumentedTest.java
PocoMobileProjects/app/src/main/: AndroidManifest.xml
PocoMobileProjects/app/src/main/cpp/: CMakeLists.txt  LoggerTest.cpp  LoggerTest.h  PocoTestMain.cpp  native-lib.cpp
PocoMobileProjects/app/src/main/cpp/PocoTest/: CMakeLists.txt
PocoMobileProjects/app/src/main/cpp/PocoTest/Logger/: LoggerTest.cpp  LoggerTest.h
PocoMobileProjects/app/src/main/cpp/PocoTest/Net/: NetTest.cpp  NetTest.h
PocoMobileProjects/app/src/main/cpp/include/Poco/: Bugcheck.h
PocoMobileProjects/app/src/main/java/com/seerlsab/pocoMobileSample/: MainActivity.java
PocoMobileProjects/app/src/main/res/layout/: activity_main.xml
PocoMobileProjects/app/src/main/res/values/: strings.xml  themes.xml
PocoMobileProjects/app/src/main/res/values-night/: themes.xml
PocoMobileProjects/app/src/test/java/com/seerlsab/pocoMobileSample/: ExampleUnitTest.java
PocoMobileProjects/gradle/wrapper/: gradle-wrapper.properties
